--- a/index.html
+++ b/index.html
@@ -56,20 +56,10 @@
                       class="card-background"
                       alt=""
                     />
-                    <div class="row flex-column gap-5" style="z-index: 55">
-                      <div class="col">
-                        <img
-                          src="./assets/page2/infographie.png"
-                          width="170px"
-                          class="isdqA80ds"
-                          data-switch-page="formation"
-                          data-switch-id="infographie"
-                        />
-                      </div>
+                    <div class="row align-items-center justify-content-center row-cols-2" style="z-index: 55;    height: 90%;">
                       <div class="col">
                         <img
                           src="./assets/page2/webdesigner.png"
-                          width="170px"
                           class="isdqA80ds"
                           data-switch-page="formation"
                           data-switch-id="infographie"
@@ -77,8 +67,33 @@
                       </div>
                       <div class="col">
                         <img
+                          src="./assets/page2/infographie.png"
+                          class="isdqA80ds"
+                          data-switch-page="formation"
+                          data-switch-id="infographie"
+                        />
+                      </div>
+
+                      <div class="col">
+                        <img
+                          src="./assets/page2/realisateur.png"
+                          class="isdqA80ds"
+                          data-switch-page="formation"
+                          data-switch-id="infographie"
+                        />
+                      </div>
+                      <div class="col">
+                        <img
+                          src="./assets/page2/assistant_prod.png"
+                          class="isdqA80ds"
+                          data-switch-page="formation"
+                          data-switch-id="infographie"
+                        />
+                      </div>
+
+                      <div class="col">
+                        <img
                           src="./assets/page2/monteur-video.png"
-                          width="170px"
                           class="isdqA80ds"
                           data-switch-page="formation"
                           data-switch-id="infographie"
