--- a/index.html
+++ b/index.html
@@ -20,11 +20,31 @@
   </head>
   <body>
     <section id="screen">
+      <div
+        class="loading"
+        style="position: absolute;
+        inset: 0;
+        z-index: 999999999;
+        background: #00000008;"
+      >
+        <div class="d-flex h-100 align-items-center justify-content-center">
+          <div class="spinner-border text-light" style="    width: 13rem;
+          height: 13rem;" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      </div>
+
       <div class="container-fluid h-100">
         <div class="row justify-content-center h-100">
           <div class="col-12 p-0">
             <div id="step-one" class="screen-container-step">
-              <img src="./assets/logo.png" class="logo" style="display: none;" alt="" />
+              <img
+                src="./assets/logo.png"
+                class="logo"
+                style="display: none"
+                alt=""
+              />
               <img src="./assets/background_1.png" class="background-1" />
               <img src="./assets/outline.png" class="outline" />
               <img
@@ -56,13 +76,16 @@
                       class="card-background"
                       alt=""
                     />
-                    <div class="row align-items-center justify-content-center row-cols-2" style="z-index: 55;    height: 90%;">
+                    <div
+                      class="row align-items-center justify-content-center row-cols-2"
+                      style="z-index: 55; height: 90%"
+                    >
                       <div class="col">
                         <img
                           src="./assets/page2/webdesigner.png"
                           class="isdqA80ds"
                           data-switch-page="formation"
-                          data-switch-id="infographie"
+                          data-switch-id="Webdesigner"
                         />
                       </div>
                       <div class="col">
@@ -70,7 +93,7 @@
                           src="./assets/page2/infographie.png"
                           class="isdqA80ds"
                           data-switch-page="formation"
-                          data-switch-id="infographie"
+                          data-switch-id="Infographie"
                         />
                       </div>
 
@@ -79,7 +102,7 @@
                           src="./assets/page2/realisateur.png"
                           class="isdqA80ds"
                           data-switch-page="formation"
-                          data-switch-id="infographie"
+                          data-switch-id="Réalisateur"
                         />
                       </div>
                       <div class="col">
@@ -87,7 +110,7 @@
                           src="./assets/page2/assistant_prod.png"
                           class="isdqA80ds"
                           data-switch-page="formation"
-                          data-switch-id="infographie"
+                          data-switch-id="Assistant Production"
                         />
                       </div>
 
@@ -96,7 +119,7 @@
                           src="./assets/page2/monteur-video.png"
                           class="isdqA80ds"
                           data-switch-page="formation"
-                          data-switch-id="infographie"
+                          data-switch-id="Monteur Vidéo"
                         />
                       </div>
                     </div>
@@ -122,7 +145,7 @@
                               src="./assets/page3/steclotilde.png"
                               alt=""
                               data-switch-page="centre"
-                              data-switch-id="steclotilde"
+                              data-switch-id="Sainte-Clotilde"
                               class="s51A91dz"
                             />
                           </div>
@@ -131,7 +154,7 @@
                               src="./assets/page3/piton.png"
                               alt=""
                               data-switch-page="centre"
-                              data-switch-id="piton"
+                              data-switch-id="Piton Saint-Leu"
                               class="s51A91dz"
                             />
                           </div>
@@ -140,7 +163,7 @@
                               src="./assets/page3/marseille.png"
                               alt=""
                               data-switch-page="centre"
-                              data-switch-id="marseille"
+                              data-switch-id="Marseille"
                               class="s51A91dz"
                               style="width: 60%; margin-top: 90px"
                             />
@@ -247,8 +270,12 @@
       let timeoutTab = null;
 
       $(document).ready(() => {
-        document.documentElement.requestFullscreen();
+        $('.loading').fadeOut(100)
       });
+
+      $(document).on('click', 'button, [data-switch-page]', () => {
+        $('.loading').fadeIn(100)
+      })
 
       $(document).on("click", "#start", (e) => {
         if (currentTimeout) clearTimeout(currentTimeout);
@@ -380,12 +407,13 @@
       );
 
       const showTab = (i) => {
+        $('.loading').fadeOut(100)
         let time = 200;
 
-        if(i == 0 || i == 4) {
-          $('.logo').css('display', 'none')
+        if (i == 0 || i == 4) {
+          $(".logo").css("display", "none");
         } else {
-          $('.logo').css('display', 'block')
+          $(".logo").css("display", "block");
         }
 
         console.log("ok");
@@ -395,13 +423,13 @@
           console.log("ok2");
           //$(e).fadeOut(time);
           if (index == i) {
-            e.style.display = "flex"
+            e.style.display = "flex";
             /*timeoutTab = setTimeout(() => {
               console.log("ok3");
               $(e).css("display", "flex").hide().fadeIn(time);
             }, time);*/
           } else {
-            e.style.display = "none"
+            e.style.display = "none";
           }
         });
       };
