--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <img src="./assets/page2/text.png" class="w-100" alt="" />
                   </div>
 
-                  <div class="card-formation formationType" style="margin-top: 9rem;">
+                  <div class="card-formation formationType" style="margin-top: 6rem;">
                     <img
                       src="./assets/page2/card.png"
                       class="card-background"
@@ -72,6 +72,7 @@
                           class="isdqA80ds"
                           data-switch-page="formation"
                           data-switch-id="Webdesigner"
+                          style="--translateZ-value:-10px"
                         />
                       </div>
                       <div class="col">
@@ -80,6 +81,7 @@
                           class="isdqA80ds"
                           data-switch-page="formation"
                           data-switch-id="Infographie"
+                          style="--translateZ-value:10px"
                         />
                       </div>
 
@@ -89,6 +91,7 @@
                           class="isdqA80ds"
                           data-switch-page="formation"
                           data-switch-id="Réalisateur"
+                          style="--translateZ-value:-10px"
                         />
                       </div>
                       <div class="col">
@@ -97,6 +100,7 @@
                           class="isdqA80ds"
                           data-switch-page="formation"
                           data-switch-id="Assistant Production"
+                          style="--translateZ-value:10px"
                         />
                       </div>
 
