--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                           src="./assets/page2/realisateur.png"
                           class="isdqA80ds"
                           data-switch-page="formation"
-                          data-switch-id="Réalisateur"
+                          data-switch-id="Assistant Réal"
                           style="--translateZ-value:-10px"
                         />
                       </div>
